implement bans
