# src/services/koa/api/instances/instance.ts
@@ -3,7 +3,8 @@ import { instanceManager } from "@service/battlefield"
 import { perm } from "@service/koa/permission"
 import userRouter from "./users"
 import playerRouter from "./players"
-import { InstanceScope, InstanceUserScope } from "@service/permissions/Scopes"
+import banRouter from "./bans"
+import { InstanceScope, InstanceUserScope, BanScope } from "@service/permissions/Scopes"
 
 const api = Router()
 
@@ -41,7 +42,8 @@ api.patch("/stop", perm(InstanceScope.UPDATE), async ctx => {
   }
 })
 
+api.use("/players", playerRouter.middleware())
 api.use("/users", perm(InstanceUserScope.ACCESS), userRouter.middleware())
-api.use("/players", perm(InstanceUserScope.ACCESS), playerRouter.middleware())
+api.use("/bans", perm(BanScope.ACCESS), banRouter.middleware())
 
 export default api
